[tool.poetry]
name = "goit-python-web-11-hw"
version = "0.1.0"
description = ""
authors = ["VolodymyrKoz <vkill7595@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
fastapi = "^0.105.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
